updated code in serviceimpl and serviceimpltest